--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   url_launcher: ^6.1.10
   video_player: ^2.6.0
+  flutter_neumorphic: ^3.2.0
 
 dev_dependencies:
   flutter_test:
