--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - lib/assets/sample2.mp4
     - lib/assets/videoplayback.mp4
     - lib/assets/videoplayback2.mp4
+    - lib/assets/Capture2.PNG
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
