--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,10 +67,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/rahul pal resume.pdf
-    - lib/assets/video_sample.mp4
-    - lib/assets/sample2.mp4
-    - lib/assets/videoplayback.mp4
-    - lib/assets/videoplayback2.mp4
+    -  lib/assets/name.mp4
+    -  lib/assets/role.mp4
+    -  lib/assets/skills.mp4
+    - lib/assets/summary.mp4
+    -  lib/assets/contact.mp4
+    -  lib/assets/dp.mp4
     - lib/assets/Capture2.PNG
 
   # An image asset can refer to one or more resolution-specific "variants", see
